--- a/index.html
+++ b/index.html
@@ -5,91 +5,97 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
+        .card{
+            display: flex;
+            flex-wrap: wrap;
+            flex-direction: column;
+        }
         h1{
             text-align: center;
         }
-        table{
-            width: 100%;
-            height: 550px;
+        th{
+            padding: 25px;
         }
         tr{
             text-align: center;
         }
-        div{
+        .green{
             background-color: rgb(42, 200, 137);
         }
     </style>
 </head>
 <body>
-    <h1>TIME TABLE</h1>
-    <table border="5">
-        <tr>
-            <th>Day/Period</th>
-            <th>I <br> 9:30-10:20</th>
-            <th>II <br> 10:20-11:10</th>
-            <th>III <br> 11:10-12:00</th>
-            <th>12:00-12:40</th>
-            <th>IV <br> 12:40-1:30</th>
-            <th>V <br> 1:30-2:30</th>
-            <th>VI <br> 2:30-3:10</th>
-            <th>VII <br> 3:10-4:00</th>
-        </tr>
+    <div class="card">    
+        <h1>TIME TABLE</h1>
+         <table border="5">
+            <tr>
+                <th>Day/Period</th>
+                <th>I <br> 9:30-10:20</th>
+                <th>II <br> 10:20-11:10</th>
+                <th>III <br> 11:10-12:00</th>
+                <th>12:00-12:40</th>
+                <th>IV <br> 12:40-1:30</th>
+                <th>V <br> 1:30-2:30</th>
+                <th>VI <br> 2:30-3:10</th>
+                <th>VII <br> 3:10-4:00</th>
+            </tr>
 
-        <tr>
-            <th>Monday</th>
-            <td>Eng</td>
-            <td>Mat</td>
-            <td>Che</td>
-            <th rowspan="6">L<br>U<br>N<br>C<br>H</th>
-            <td colspan="3">LAB</td>
-            <td>Phy</td>
-        </tr>
+            <tr>
+                <th>Monday</th>
+                <td>Eng</td>
+                <td>Mat</td>
+                <td>Che</td>
+                <th rowspan="6">L<br>U<br>N<br>C<br>H</th>
+                <td colspan="3">LAB</td>
+                <td>Phy</td>
+            </tr>
 
-        <tr>
-            <th>Tuesday</th>
-            <td colspan="3">LAB</td>
-            <td>Eng</td>
-            <td>Che</td>
-            <td>Mat</td>
-            <td>SPORTS</td>
-        </tr>
+            <tr>
+                <th>Tuesday</th>
+                <td colspan="3">LAB</td>
+                <td>Eng</td>
+                <td>Che</td>
+                <td>Mat</td>
+                <td>SPORTS</td>
+            </tr>
 
-        <tr>
-            <th>Wednesday</th>
-            <td>Mat</td>
-            <td>Phy</td>
-            <td>Eng</td>
-            <td>Che</td>
-            <td colspan="3">LIBRARY</td>
-        </tr>
+            <tr>
+                <th>Wednesday</th>
+                <td>Mat</td>
+                <td>Phy</td>
+                <td>Eng</td>
+                <td>Che</td>
+                <td colspan="3">LIBRARY</td>
+            </tr>
 
-        <tr>
-            <th>Thursday</th>
-            <td>Phy</td>
-            <td>Eng</td>
-            <td>Che</td>
-            <td colspan="3">LAB</td>
-            <td>Mat</td>
-        </tr>
+            <tr>
+                <th>Thursday</th>
+                <td>Phy</td>
+                <td>Eng</td>
+                <td>Che</td>
+                <td colspan="3">LAB</td>
+                <td>Mat</td>
+            </tr>
 
-        <tr>
-            <th>Friday</th>
-            <td colspan="3">LAB</td>
-            <td>Mat</td>
-            <td>Che</td>
-            <td>Eng</td>
-            <td>Phy</td>
-        </tr>
+            <tr>
+                <th>Friday</th>
+                <td colspan="3">LAB</td>
+                <td>Mat</td>
+                <td>Che</td>
+                <td>Eng</td>
+                <td>Phy</td>
+            </tr>
 
-        <tr>
-            <th>Saturday</th>
-            <td>Eng</td>
-            <td>Che</td>
-            <td>Mat</td>
-            <td colspan="3">SEMINAR</td>
-            <td>SPORTS</td>
-        </tr>
-    </table>
-    <div><marquee behavior="" direction="left">THIS TIMETABLE WAS DESIGNED BY FRANCIS ONAI AN AS ASSIGNMENT IN WEB DEVELOPER CLUB.</marquee></div>
+            <tr>
+                <th>Saturday</th>
+                <td>Eng</td>
+                <td>Che</td>
+                <td>Mat</td>
+                <td colspan="3">SEMINAR</td>
+                <td>SPORTS</td>
+            </tr>
+        </table>
+        <legend class="green"><marquee behavior="" direction="left">THIS TIMETABLE WAS DESIGNED BY FRANCIS ONAI AS AN ASSIGNMENT IN BASIC WEB DEVELOPERS CLUB.</marquee></legend>
+    </div>
 </body>
 </html>
