--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             text-align: center;
         }
         th{
-            padding: 25px;
+            padding: 25px 0;
         }
         tr{
             text-align: center;
